--- a/run/agent_config.json
+++ b/run/agent_config.json
@@ -231,6 +231,7 @@
       "dependencies": {
         "egg": "^3.20.0",
         "egg-cors": "^3.0.0",
+        "egg-onerror": "^2.2.0",
         "egg-sequelize": "^6.0.0",
         "egg-socket.io": "^4.1.6",
         "moment": "^2.30.1",
@@ -571,6 +572,7 @@
       "dependencies": {
         "egg": "^3.20.0",
         "egg-cors": "^3.0.0",
+        "egg-onerror": "^2.2.0",
         "egg-sequelize": "^6.0.0",
         "egg-socket.io": "^4.1.6",
         "moment": "^2.30.1",
